# AlgoTrading

./: .gitignore  LICENSE  README.md  dev_requirements.txt  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
docs/: finance_apis.txt  papers.txt
scripts/: LSTM.py  LTSM_0  date.npz  eval.py  fapi_script.py  fetch.py  finance_training_dates.npz  finance_training_metrics.npz  generate_csv.py  healthcare_training_dates.npz  healthcare_training_metrics.npz  load.py  model.py  msft_metrics.npz  process.py  train.py  training_dates.npz  training_metrics.npz  validate_predict.py  visualize.py
scripts/runs/Apr10_18-22-05_MacBook-Pro-5.local/: events.out.tfevents.1712787725.MacBook-Pro-5.local.33725.0
scripts/runs/Apr10_18-24-35_MacBook-Pro-5.local/: events.out.tfevents.1712787875.MacBook-Pro-5.local.44329.0
scripts/runs/Apr10_18-25-06_MacBook-Pro-5.local/: events.out.tfevents.1712787906.MacBook-Pro-5.local.44966.0
scripts/runs/Apr10_18-51-41_MacBook-Pro-5.local/: events.out.tfevents.1712789501.MacBook-Pro-5.local.57533.0
scripts/runs/Apr10_18-53-54_MacBook-Pro-5.local/: events.out.tfevents.1712789634.MacBook-Pro-5.local.58587.0
scripts/runs/Apr10_18-56-26_MacBook-Pro-5.local/: events.out.tfevents.1712789786.MacBook-Pro-5.local.59808.0
scripts/runs/Apr10_18-57-29_MacBook-Pro-5.local/: events.out.tfevents.1712789849.MacBook-Pro-5.local.60296.0
scripts/runs/Apr10_18-59-15_MacBook-Pro-5.local/: events.out.tfevents.1712789955.MacBook-Pro-5.local.61073.0
src/algotrade/models/: LTSMCell.py  LTSMModel.py  __init__.py
tests/: dummy_test.py
(+2 files in other folders)
