[metadata]
name = algotrade
version = 0.1.0
author = Brian Reicher, Claire Pan
author_email = reicher.b@northeastern.edu, pan.claire
url = https://github.com/Inferred-Mind/models
description = Deep Learning algorithmics trading models, using sentiment-informed LLMs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deep-learning, algorithmic-trading
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    pytest
    numpy
    requests
    tqdm
    python-dotenv

[options.packages.find]
where=src


